fix page scroll on mobile menue

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@ body {
   line-height: 1.6;
 }
 
+.no-scroll {
+  height: 100%;
+  overflow: hidden;
+}
+
 img {
   max-width: 100%;
 }
